tests/paczka1/fuzzy1/43624453.err
Error in line 3: 3PNQfp2 A681 44,4
Error in line 6: 3PNQfp2 A68 85,0
Error in line 15: HU3MN A68 80,4
Error in line 25: Mxp9uZag A681 41,83
Error in line 19: Mxp9uZag A681 64,6
Error in line 35: 3PNQfp2 A68 55,4
